--- a/HTML/CatalogPage.html
+++ b/HTML/CatalogPage.html
@@ -109,7 +109,7 @@
 						<div class="row">
 							<div class="col-md-5 col-sm-12 col-xs-12">
 								<div class="product-image">
-									<br><br><br><img src="../Photo/Product5.png" alt="194x228" class="img-responsive">
+									<br><br><br><img src="../Photo/razer18.jpg" alt="194x228" class="img-responsive">
 									<span class="tag2 hot">
 										HOT
 									</span>
@@ -118,7 +118,7 @@
 							<div class="col-md-7 col-sm-12 col-xs-12">
 								<div class="product-deatil">
 									<h5 class="name">
-										<a href="#">
+										<a href="https://www.bestbuy.com/site/razer-blade-18-18-gaming-laptop-qhd-240-hz-intel-24-core-i9-13950hx-nvidia-geforce-rtx-4090-32gb-ram-2tb-ssd-black/6533840.p?skuId=6533840">
 											Razer Blade 18 <span>Gaming Laptop</span>
 										</a>
 									</h5>
@@ -133,6 +133,7 @@
 										featuring the latest Intel® 13th Gen Core™ i9 HX processors and NVIDIA® GeForce
 										RTX™
 										40 Series graphics. </p>
+										<br><br><br>
 								</div>
 								<div class="product-info smart-form">
 									<div class="row">
@@ -174,7 +175,7 @@
 								<div class="product-deatil">
 									<h5 class="name">
 										<a
-											href="https://www.asus.com/laptops/for-home/zenbook/zenbook-14-flip-oled-up3404/">
+											href="https://rog.asus.com/laptops/rog-zephyrus/rog-zephyrus-g14-series/">
 											Asus ROG Zephyrus G14. <span>Gaming Laptop</span>
 										</a>
 									</h5>
@@ -186,7 +187,7 @@
 								<div class="description">
 									<p>Dynamic and ready to travel, the pioneering ROG Zephyrus G14 is the world’s most
 										powerful 14-inch Windows 10 Pro gaming laptop.
-									</p>
+									</p> <br><br><br><br>
 								</div>
 								<div class="product-info smart-form">
 									<div class="row">
@@ -229,7 +230,7 @@
 								<div class="product-deatil">
 									<h5 class="name">
 										<a
-											href="https://www.asus.com/laptops/for-home/zenbook/zenbook-14-flip-oled-up3404/">
+											href="https://www.hp.com/us-en/shop/pdp/hp-pavilion-desktop-tp01-3055xt-bundle-pc">
 											HP Pavilion Desktop TP01-3055xt <span>Desktop</span>
 										</a>
 									</h5>
@@ -241,10 +242,11 @@
 								<div class="description">
 									<p>Intel Core i7-12700 (2.1 GHz base frequency, up to 4.9 GHz with Intel Turbo Boost
 										Technology, 25 MB L3 cache, 12 cores, 20 threads) </p>
+										<br><br><br><br>
 								</div>
 								<div class="product-info smart-form">
 									<div class="row">
-										<div class="col-md-6 col-sm-6 col-xs-6"> <br>
+										<div class="col-md-6 col-sm-6 col-xs-6">
 											<a href="javascript:void(0);" class="btn btn-success">Add to cart</a>
 										</div>
 										<div class="col-md-6 col-sm-6 col-xs-6">
@@ -282,7 +284,7 @@
 								<div class="product-deatil">
 									<h5 class="name">
 										<a
-											href="https://www.asus.com/laptops/for-home/zenbook/zenbook-14-flip-oled-up3404/">
+											href="https://www.dell.com/en-us/shop/desktop-computers/sr/desktops/xps-desktops">
 											XPS Desktop <span>Desktop</span>
 										</a>
 									</h5>
@@ -295,10 +297,11 @@
 									<p>An elegant desktop that gives your ideas room to grow—with infinite
 										expandability,
 										monstrous performance and blazing-fast speeds. </p>
+										<br><br><br><br>
 								</div>
 								<div class="product-info smart-form">
 									<div class="row">
-										<div class="col-md-6 col-sm-6 col-xs-6"> <br>
+										<div class="col-md-6 col-sm-6 col-xs-6">
 											<a href="javascript:void(0);" class="btn btn-success">Add to cart</a>
 										</div>
 										<div class="col-md-6 col-sm-6 col-xs-6">
@@ -336,7 +339,7 @@
 								<div class="product-deatil">
 									<h5 class="name">
 										<a
-											href="https://www.asus.com/laptops/for-home/zenbook/zenbook-14-flip-oled-up3404/">
+											href="https://rog.asus.com/laptops/rog-strix/rog-strix-g16-2023-series/">
 											Asus Rog Strix G16 16″ <span>Gaming Laptop</span>
 										</a>
 									</h5>
@@ -348,11 +351,11 @@
 								<div class="description">
 									<p> Draw more frames and win more games with Windows 11, a 13th Gen Intel Core
 										i9-13980HX processor, and an NVIDIA GeForce RTX 4070 Laptop GPU at 140W Max TGP
-									</p>
+									</p> <br><br><br>
 								</div>
 								<div class="product-info smart-form">
 									<div class="row">
-										<div class="col-md-6 col-sm-6 col-xs-6"> <br>
+										<div class="col-md-6 col-sm-6 col-xs-6">
 											<a href="javascript:void(0);" class="btn btn-success">Add to cart</a>
 										</div>
 										<div class="col-md-6 col-sm-6 col-xs-6">
@@ -380,7 +383,7 @@
 						<div class="row">
 							<div class="col-md-5 col-sm-12 col-xs-12">
 								<div class="product-image">
-									<br><br><br> <img src="../Photo/gaming-lp3.jpg" alt="194x228"
+									<br><br><br> <img src="../Photo/razerBlade1.jpg" alt="194x228"
 										class="img-responsive">
 									<span class="tag2 hot">
 										HOT
@@ -391,23 +394,24 @@
 								<div class="product-deatil">
 									<h5 class="name">
 										<a
-											href="https://www.asus.com/laptops/for-home/zenbook/zenbook-14-flip-oled-up3404/">
-											Asus Rog Strix G16 16″ <span>Gaming Laptop</span>
+											href="https://www.bestbuy.com/site/razer-blade-15-15-6-gaming-laptop-qhd-240hz-intel-core-i7-nvidia-geforce-rtx-3080-ti-32gb-ram-1tb-ssd-black/6499097.p?skuId=6499097">
+											Razer - Blade 15 - 15.6" Gaming Laptop - QHD- 240HZ - Intel Core i7 <span>Gaming Laptop</span>
 										</a>
 									</h5>
 									<p class="price-container">
-										<span>$1738.77</span>
+										<span>$3,099.99</span>
 									</p>
 									<span class="tag1"></span>
 								</div>
 								<div class="description">
-									<p> Draw more frames and win more games with Windows 11, a 13th Gen Intel Core
-										i9-13980HX processor, and an NVIDIA GeForce RTX 4070 Laptop GPU at 140W Max TGP
-									</p>
+									<p> Intel 12th Gen 14-Core CPU
+										With PCIe Gen4 performance and DDR5 memory for speeds of up to 4800MHz,
+										 the new Intel i7-12800H 14-core processor is able to keep pace with the most resource-hungry tasks without breaking a sweat.
+									</p> <br>
 								</div>
 								<div class="product-info smart-form">
 									<div class="row">
-										<div class="col-md-6 col-sm-6 col-xs-6"> <br>
+										<div class="col-md-6 col-sm-6 col-xs-6"> 
 											<a href="javascript:void(0);" class="btn btn-success">Add to cart</a>
 										</div>
 										<div class="col-md-6 col-sm-6 col-xs-6">
@@ -444,7 +448,7 @@
 							<div class="col-md-7 col-sm-12 col-xs-12">
 								<div class="product-deatil">
 									<h5 class="name">
-										<a href="#">
+										<a href="https://www.hp.com/us-en/shop/mdp/desktops/omen-40l-gaming-desktop">
 											OMEN 40L Gaming Desktop PC GT21-1001a <span>Desktop</span>
 										</a>
 									</h5>
@@ -458,7 +462,7 @@
 										3070
 										(8 GB GDDR6 dedicated) with LHR Kingston FURY 16 GB DDR5-4000 MHz XMP RGB
 										Heatsink
-										RAM (2 x 8 GB) 1 TB WD Black PCIe® NVMe™ TLC M.2 SSD Weighs 18.7 kg </p>
+										RAM (2 x 8 GB) 1 TB WD Black PCIe® NVMe™ TLC M.2 SSD Weighs 18.7 kg </p> 
 								</div>
 								<div class="product-info smart-form">
 									<div class="row">
@@ -499,7 +503,7 @@
 							<div class="col-md-7 col-sm-12 col-xs-12">
 								<div class="product-deatil">
 									<h5 class="name">
-										<a href="#">
+										<a href="https://www.hp.com/au-en/shop/hp-pavilion-31-5-inch-all-in-one-desktop-pc-32-b0004a-6r1f0pa.html">
 											HP Pavilion 31.5 inch All-in-One Desktop PC 32-b0004a Bundle
 											<span>Desktop</span>
 										</a>
@@ -513,7 +517,7 @@
 									<p>12th Generation Intel® Core™ i5 processor Windows 11 Home 31.5" diagonal QHD
 										display
 										16 GB DDR4-3200 MHz RAM (2 x 8 GB) 512 GB PCIe® NVMe™ TLC M.2 SSD Intel® UHD
-										Graphics 730 Weighs 14 kg </p>
+										Graphics 730 Weighs 14 kg </p> <br>
 								</div>
 								<div class="product-info smart-form">
 									<div class="row">
@@ -568,11 +572,11 @@
 									<p>14” 2.8K OLED convertible laptop
 										16:10, 2.8K (2880 by 1800) high resolution, OLED NanoEdge touchscreen, 0.2 ms
 										response time, 100% DCI-P3 color gamut, up to 550 nits peak brightness </p>
-									<br><br>
+									<br><br><br>
 								</div>
 								<div class="product-info smart-form">
 									<div class="row">
-										<div class="col-md-6 col-sm-6 col-xs-6"> <br>
+										<div class="col-md-6 col-sm-6 col-xs-6">
 											<a href="javascript:void(0);" class="btn btn-success">Add to cart</a>
 										</div>
 										<div class="col-md-6 col-sm-6 col-xs-6">
@@ -600,7 +604,7 @@
 						<div class="row">
 							<div class="col-md-5 col-sm-12 col-xs-12">
 								<div class="product-image">
-									<br><br><br> <img src="../Photo/Product1.png" alt="194x228" class="img-responsive">
+									<br><br><br> <img src="../Photo/MacBook.jpg" alt="194x228" class="img-responsive">
 									<span class="tag2 hot">
 										HOT
 									</span>
@@ -610,8 +614,8 @@
 								<div class="product-deatil">
 									<h5 class="name">
 										<a
-											href="https://www.asus.com/laptops/for-home/zenbook/zenbook-14-flip-oled-up3404/">
-											ASUS Zenbook 14 Flip OLED (UP3404) <span>Laptop</span>
+											href="https://www.bestbuy.com/site/apple-macbook-pro-16-laptop-m2-pro-chip-16gb-memory-1tb-ssd-latest-model-space-gray/6450866.p?skuId=6450866">
+											Apple - MacBook Pro 16" Laptop - M2 Pro chip - 16GB Memory - 1TB SSD <span>Laptop</span>
 										</a>
 									</h5>
 									<p class="price-container">
@@ -620,14 +624,14 @@
 									<span class="tag1"></span>
 								</div>
 								<div class="description">
-									<p>14” 2.8K OLED convertible laptop
-										16:10, 2.8K (2880 by 1800) high resolution, OLED NanoEdge touchscreen, 0.2 ms
-										response time, 100% DCI-P3 color gamut, up to 550 nits peak brightness </p>
-									<br><br>
+									<p>
+										The 16-inch MacBook Pro with M2 Pro and M2 Max takes power and speed to the next level,
+										whether it’s on battery or plugged in. With a stunning Liquid Retina XDR display, 
+										all the ports you need, and all-day battery life—this pro laptop goes anywhere you need. </p> 
 								</div>
 								<div class="product-info smart-form">
 									<div class="row">
-										<div class="col-md-6 col-sm-6 col-xs-6"> <br>
+										<div class="col-md-6 col-sm-6 col-xs-6"> 
 											<a href="javascript:void(0);" class="btn btn-success">Add to cart</a>
 										</div>
 										<div class="col-md-6 col-sm-6 col-xs-6">
@@ -664,7 +668,7 @@
 							<div class="col-md-7 col-sm-12 col-xs-12">
 								<div class="product-deatil">
 									<h5 class="name">
-										<a href="#">
+										<a href="https://www.apple.com/imac-24">
 											24‑inch iMac Apple <span>Desktop</span>
 										</a>
 									</h5>
@@ -676,7 +680,7 @@
 								<div class="description">
 									<p>M1 integrates the processor, graphics, memory, and more onto a single chip. That
 										let
-										us put an entire computer into a space so small it practically disappears. </p>
+										us put an entire computer into a space so small it practically disappears. </p> <br><br><br>
 								</div>
 								<div class="product-info smart-form">
 									<div class="row">
@@ -708,7 +712,7 @@
 						<div class="row">
 							<div class="col-md-5 col-sm-12 col-xs-12">
 								<div class="product-image">
-									<br><br><br> <img src="../Photo/Product6.png" alt="194x228" class="img-responsive">
+									<br><br><br> <img src="../Photo/OMENdesktop.jpg" alt="194x228" class="img-responsive">
 									<span class="tag2 hot">
 										HOT
 									</span>
@@ -717,8 +721,8 @@
 							<div class="col-md-7 col-sm-12 col-xs-12">
 								<div class="product-deatil">
 									<h5 class="name">
-										<a href="#">
-											24‑inch iMac Apple <span>Desktop</span>
+										<a href="https://www.bestbuy.com/site/hp-omen-omen-40l-gaming-desktop-amd-ryzen-5-5600g-16gb-hyperx-memory-nvidia-geforce-rtx-3060-ti-1tb-ssd/6535731.p?skuId=6535731">
+											HP OMEN - OMEN 40L Gaming Desktop - AMD Ryzen 5 5600G - 16GB HyperX Memory <span>Desktop</span>
 										</a>
 									</h5>
 									<p class="price-container">
@@ -727,9 +731,11 @@
 									<span class="tag1"></span>
 								</div>
 								<div class="description">
-									<p>M1 integrates the processor, graphics, memory, and more onto a single chip. That
-										let
-										us put an entire computer into a space so small it practically disappears. </p>
+									<p>
+										Embrace your gaming destiny with the OMEN 40L Gaming Desktop PC.
+										 Reach peak levels through advanced customization with OMEN Gaming Hub, and a toolless access case. 
+										 The power to elevate your game.
+										 </p>
 								</div>
 								<div class="product-info smart-form">
 									<div class="row">
@@ -761,7 +767,7 @@
 						<div class="row">
 							<div class="col-md-5 col-sm-12 col-xs-12">
 								<div class="product-image">
-									<br><br><br> <img src="../Photo/Product1.png" alt="194x228" class="img-responsive">
+									<br><br><br> <img src="../Photo/HPlaptop.jpg" alt="194x228" class="img-responsive">
 									<span class="tag2 hot">
 										HOT
 									</span>
@@ -771,8 +777,8 @@
 								<div class="product-deatil">
 									<h5 class="name">
 										<a
-											href="https://www.asus.com/laptops/for-home/zenbook/zenbook-14-flip-oled-up3404/">
-											ASUS Zenbook 14 Flip OLED (UP3404) <span>Laptop</span>
+											href="https://www.bestbuy.com/site/hp-victus-15-6-full-hd-144hz-gaming-laptop-intel-core-i5-13420h-8gb-memory-nvidia-geforce-rtx-3050-512gb-ssd-performance-blue/6535505.p?skuId=6535505">
+											HP - Victus 15.6" Full HD 144Hz Gaming Laptop - Intel Core i5-13420H <span>Laptop</span>
 										</a>
 									</h5>
 									<p class="price-container">
@@ -781,14 +787,12 @@
 									<span class="tag1"></span>
 								</div>
 								<div class="description">
-									<p>14” 2.8K OLED convertible laptop
-										16:10, 2.8K (2880 by 1800) high resolution, OLED NanoEdge touchscreen, 0.2 ms
-										response time, 100% DCI-P3 color gamut, up to 550 nits peak brightness </p>
-									<br><br>
+									<p>
+										The HP Victus Laptop is made for peak PC gaming. This sleek machine touts a 13th Gen Intel Core processor¹ and a modern graphics card. This laptop’s design is just as impressive as its hardware with plenty of color options², updated thermals and an HD camera with Temporal Noise Reduction. </p>
 								</div>
 								<div class="product-info smart-form">
 									<div class="row">
-										<div class="col-md-6 col-sm-6 col-xs-6"> <br>
+										<div class="col-md-6 col-sm-6 col-xs-6"> 
 											<a href="javascript:void(0);" class="btn btn-success">Add to cart</a>
 										</div>
 										<div class="col-md-6 col-sm-6 col-xs-6">
