updated main page

--- a/HTML/MainPage.html
+++ b/HTML/MainPage.html
@@ -51,7 +51,7 @@
     
     <div class="pcBrands">
         <br>
-        <h1 class="bestSellerH1">Best seller brands</h1>
+        <h1 class="bestSellerH1">Best selling brands</h1>
         <br>
         <div class="image-row"> 
             <img id="img1" src="../Photo/Dell_thumbnail (1).png" alt="">
@@ -72,35 +72,35 @@
                     <div class="card-container">
                         <div class="card">
                             <div class="card-text">
-                                <h2>Workstation</h2>
-                                <p>All in one. PC, monitor, mouse and keyboard.</p><br>
-                                <button class="btn">$1000</button>
+                                <h2>Razer Blade 18</h2>
+                                <p>Gaming Pc, featuring the latest Intel® 13th Gen Core™ i9 HX processors and NVIDIA® GeForce RTX™ 40 Series graphics.</p><br>
+                                <button class="btn">$2899.00</button>
                             </div>
-                            <img src="../Photo/img1.jpg" alt="" class="inside-container">
+                            <img src="../Photo/razerBlade1.jpg" alt="" class="inside-container">
                         </div>
                         <div class="card">
                             <div class="card-text">
-                                <h2>Workstation</h2>
-                                <p>All in one. PC, monitor, mouse and keyboard.</p><br>
-                                <button class="btn">$1000</button>
+                                <h2>ASUS Zenbook 14 Flip OLED</h2>
+                                <p>14” 2.8K OLED convertible laptop 16:10, 2.8K (2880 by 1800) high resolution, OLED NanoEdge touchscreen.</p><br>
+                                <button class="btn">$800.00</button>
                             </div>
-                            <img src="../Photo/img1.jpg" alt="" class="inside-container">
+                            <img src="../Photo/Product1.png" alt="" class="inside-container">
                         </div>
                         <div class="card">
                             <div class="card-text">
-                                <h2>Workstation</h2>
-                                <p>All in one. PC, monitor, mouse and keyboard.</p><br>
-                                <button class="btn">$1000</button>
+                                <h2>Asus ROG Zephyrus G14.</h2>
+                                <p>Gaming laptop. Dynamic and ready to travel, the pioneering ROG Zephyrus G14 is the world’s most powerful 14-inch Windows 10 Pro.</p><br>
+                                <button class="btn">$1599.00</button>
                             </div>
-                            <img src="../Photo/img1.jpg" alt="" class="inside-container">
+                            <img src="../Photo/gaming-lp2.jpg" alt="" class="inside-container">
                         </div>
                         <div class="card">
                             <div class="card-text">
-                                <h2>Workstation</h2>
-                                <p>All in one. PC, monitor, mouse and keyboard.</p><br>
-                                <button class="btn">$1000</button>
+                                <h2>HP - Victus 15.6" Full HD 144Hz- Intel Core i5.</h2>
+                                <p>This laptop’s design is just as impressive as its hardware, plenty of color options and an HD camera with Temporal Noise Reduction</p><br>
+                                <button class="btn">$800.00</button>
                             </div>
-                            <img src="../Photo/img1.jpg" alt="" class="inside-container">
+                            <img src="../Photo/HPlaptop.jpg" alt="" class="inside-container">
                         </div> 
                     </div>
                 </div>
@@ -110,35 +110,37 @@
                     <div class="card-container">
                         <div class="card">
                             <div class="card-text">
-                                <h2>Workstation</h2>
-                                <p>All in one. PC, monitor, mouse and keyboard.</p><br>
+                                <h2>Gigabyte Z690 Aorus Xtreme</h2>
+                                <p>Chipset: Z690, Memory Support: 4 x DDR5 6,600Hz 128GB with expansion slots. Comaptible with Hp and Dell PCs</p><br>
                                 <button class="btn">$1000</button>
                             </div>
-                            <img src="../Photo/img1.jpg" alt="" class="inside-container">
+                            <img src="../Photo/aours.png" alt="" class="inside-container">
                         </div>
                         <div class="card">
                             <div class="card-text">
-                                <h2>Workstation</h2>
-                                <p>All in one. PC, monitor, mouse and keyboard.</p><br>
+                                <h2>Intel Core i9-12900K</h2>
+                                <p>This chipset is the 12th Gen of the i9 cpu line. Speed 3.2 GHz can be clocked up to 4.0 GHz.</p><br>
                                 <button class="btn">$1000</button>
                             </div>
-                            <img src="../Photo/img1.jpg" alt="" class="inside-container">
+                            <img src="../Photo/i9.jpg" alt="" class="inside-container">
                         </div>
                         <div class="card">
                             <div class="card-text">
-                                <h2>Workstation</h2>
-                                <p>All in one. PC, monitor, mouse and keyboard.</p><br>
+                                <h2>TeamGroup T-Force Xtreem</h2>
+                                <p>Data Rate: DDR4-3600 (XMP)
+                                    Capacity: 16 GB (2 x 8GB) <br>
+                                    Model: TF10D416G3600HC14CDC01</p><br>
                                 <button class="btn">$1000</button>
                             </div>
-                            <img src="../Photo/img1.jpg" alt="" class="inside-container">
+                            <img src="../Photo/xtreem.jpg" alt="" class="inside-container">
                         </div>
                         <div class="card">
                             <div class="card-text">
-                                <h2>Workstation</h2>
-                                <p>All in one. PC, monitor, mouse and keyboard.</p><br>
+                                <h2>Silicon Power SSD</h2>
+                                <p>Its has SATA 3 slim, laptop harddrive, 256 GB  of storage and 512 MB Cache. Fast and easy to upgrade.</p><br>
                                 <button class="btn">$1000</button>
                             </div>
-                            <img src="../Photo/img1.jpg" alt="" class="inside-container">
+                            <img src="../Photo/firstssd.jpg" alt="" class="inside-container">
                         </div> 
                     </div>
                     <div class="swiper-button-prev"></div>
