--- a/HTML/parts.html
+++ b/HTML/parts.html
@@ -167,7 +167,131 @@
         
       </div>
       <h1>RAM</h1>
-      <h1>ROM</h1>
+      <div class="main-content">
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img src="../Photo/trident.jpg" alt="" style="width:250px;height:250px;">
+            </div>
+            <div class="flip-card-back">
+              <h2>G.Skill Trident Z5</h2>
+              <li>Data Rate: DDR5-6000 (XMP)</li>
+              <li>Capacity: 32GB (2 x 16GB)</li>
+              <li>Model: F5-6000U3636E16GX2-TZ5RS</li>
+              <button>Buy now</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img src="../Photo/viper.jpg" style="width:250px;height:250px;">
+            </div>
+            <div class="flip-card-back">
+              <h2>Patriot Viper Steel</h2>
+              <li>Data Rate: DDR4-4400 (XMP)</li>
+              <li>Capacity: 16 GB (2 x 8GB)</li>
+              <li>Model: PVS416G440C9Kx</li>
+              <button>Buy now</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img src="../Photo/xtreem.jpg" style="width:250px;height:250px;">
+            </div>
+            <div class="flip-card-back">
+              <h2>TeamGroup T-Force Xtreem</h2>
+              <li>Data Rate: DDR4-3600 (XMP)</li>
+              <li>Capacity: 16 GB (2 x 8GB)</li>
+              <li>Model: TF10D416G3600HC14CDC01</li>
+              <button>Buy now</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img src="../Photo/samsungram.jpg" style="width:250px;height:250px;">
+            </div>
+            <div class="flip-card-back">
+              <h2>Samsung DDR5-4800 (2 x 16GB)</h2>
+              <li>Data Rate: DDR5-4800</li>
+              <li>Capacity: 32GB (2 x 16GB)</li>
+              <li>Model: M323R2GA3BB0-CQKOD</li>
+              <button>Buy now</button>
+            </div>
+          </div>
+        </div>
+        
+      </div>
+      <h1>Hard drives and ssd</h1>
+       <div class="main-content">
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="../Photo/barracudahd.png" style="width:250px;height:250px;">
+          </div>
+          <div class="flip-card-back">
+            <h2>Seagate BarraCuda</h2>
+            <li>4TB Internal Hard Drive HDD</li>
+            <li> 3.5 Inch Sata 6 Gb/s 5400 RPM</li>
+            <li>256 MB Cache</li>
+            <button>Buy now</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="../Photo/toshibahd.png" style="width:250px;height:250px;">
+          </div>
+          <div class="flip-card-back">
+            <h2>Toshiba X300</h2>
+            <li>16TB Internal Hard Drive HDD</li>
+            <li> SATA 6 GB/s 7200 RPM </li>
+            <li>512 MB Cache</li>
+            <button>Buy now</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="../Photo/firstssd.jpg" style="width:250px;height:250px;">
+          </div>
+          <div class="flip-card-back">
+            <h2>Silicon Power SSD</h2>
+            <li>256 GB storage</li>
+            <li> SATA 3 slim, laptop harddrive </li>
+            <li>512 MB Cache</li>
+            <button>Buy now</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="../Photo/secondssd.jpg" style="width:250px;height:250px;">
+          </div>
+          <div class="flip-card-back">
+            <h2>Samsung SM883</h2>
+            <li>480 GB storage</li>
+            <li> SATA 3 slim, laptop harddrive </li>
+            <li>540 MB Cache</li>
+            <button>Buy now</button>
+          </div>
+        </div>
+      </div>
+
+    </div>
       <h1>Miscellaneous</h1>
     </div>
   </div>
