--- a/HTML/MainPage.html
+++ b/HTML/MainPage.html
@@ -22,7 +22,7 @@
         
           <a href="../HTML/MainPage.html">Home</a>
           <a href="../HTML/CatalogPage.html">Catalog</a>
-          <a href="#">Parts</a>
+          <a href="../HTML/parts.html">Parts</a>
           <a href="../HTML/contactUs.html">Contact Us</a>
           <a href="../HTML/AboutUs.html">About Us</a>
           <a href="#" class="toggle-button">&#9776;</a>
@@ -137,7 +137,7 @@
                         <div class="card">
                             <div class="card-text">
                                 <h2>Silicon Power SSD</h2>
-                                <p>Its has SATA 3 slim, laptop harddrive, 256 GB  of storage and 512 MB Cache. Fast and easy to upgrade.</p><br>
+                                <p>Its compatiblewith SATA 3 slim, laptop harddrive, 256 GB  of storage and 512 MB Cache. Fast and easy to upgrade.</p><br>
                                 <button class="btn">$1000</button>
                             </div>
                             <img src="../Photo/firstssd.jpg" alt="" class="inside-container">
