--- a/HTML/parts.html
+++ b/HTML/parts.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <title>Pc Hub-Parts</title>
   <link rel="stylesheet" href="../CSS/flipcards.css">
   <link rel="stylesheet" href="../CSS/navbar.css">
   <link rel="stylesheet" href="../CSS/parts.css">
@@ -15,12 +16,16 @@
 <body>
   <nav class="navBar">
 
-    <a href="../HTML/MainPage.html">Home</a>
-    <a href="#">Service</a>
-    <a href="CatalogPage.html">Catalog</a>
-    <a href="#">Parts</a>
-    <a href="#">About Us</a>
-    <a href="#" class="toggle-button">&#9776;</a>
+    <nav class="navBar">
+        
+      <a href="../HTML/MainPage.html">Home</a>
+      <a href="../HTML/CatalogPage.html">Catalog</a>
+      <a href="../HTML/parts.html">Parts</a>
+      <a href="../HTML/contactUs.html">Contact Us</a>
+      <a href="../HTML/AboutUs.html">About Us</a>
+      <a href="#" class="toggle-button">&#9776;</a>
+    
+  </nav>
 
   </nav>
   <br><br><br><br><br>
