--- a/HTML/CatalogPage.html
+++ b/HTML/CatalogPage.html
@@ -228,12 +228,14 @@
 							</div>
 							<div class="col-md-7 col-sm-12 col-xs-12">
 								<div class="product-deatil">
+									<div id="7">
 									<h5 class="name">
 										<a
 											href="https://www.hp.com/us-en/shop/pdp/hp-pavilion-desktop-tp01-3055xt-bundle-pc">
 											HP Pavilion Desktop TP01-3055xt <span>Desktop</span>
 										</a>
 									</h5>
+								</div>
 									<p class="price-container">
 										<span>$799.99</span>
 									</p>
@@ -557,12 +559,14 @@
 							</div>
 							<div class="col-md-7 col-sm-12 col-xs-12">
 								<div class="product-deatil">
+									<div id="8">
 									<h5 class="name">
 										<a
 											href="https://www.asus.com/laptops/for-home/zenbook/zenbook-14-flip-oled-up3404/">
 											ASUS Zenbook 14 Flip OLED (UP3404) <span>Laptop</span>
 										</a>
 									</h5>
+								</div>
 									<p class="price-container">
 										<span>$800.00</span>
 									</p>
