--- a/HTML/parts.html
+++ b/HTML/parts.html
@@ -33,9 +33,12 @@
 
     <div class="sticky-container">
       <ul class="ul">
-        <li class="li"><a href="#home">Computers</a></li>
-        <li class="li"><a href="#news">Laptops</a></li>
-        <li class="li"><a href="#contact">Parts</a></li>
+        <li class="li"><a href="../HTML/CatalogPage.html#7">Computers</a></li>
+        <li class="li"><a href="../HTML/CatalogPage.html#8">Laptops</a></li>
+        <li class="li"><a href="#1">Motherboard</a></li>
+        <li class="li"><a href="#2">CPU</a></li>
+        <li class="li"><a href="#3">RAM</a></li>
+        <li class="li"><a href="#4">HD and ssd</a></li>
         <li class="li"><a href="#contact">Miscellaneous</a></li>
       </ul>
     </div>
@@ -43,6 +46,7 @@
     <div>
       <h1>Motherboards</h1>
       <div main-content style="display: flex; justify-content: space-between;">
+        <div id="1">
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
@@ -58,7 +62,7 @@
             </div>
           </div>
         </div>
-
+      </div>
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
@@ -109,7 +113,9 @@
         
       </div>
       <h1>CPU</h1>
+      
       <div class="main-content">
+        <div id="2">          
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
@@ -124,7 +130,7 @@
             </div>
           </div>
         </div>
-
+      </div>
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
@@ -173,6 +179,8 @@
       </div>
       <h1>RAM</h1>
       <div class="main-content">
+
+        <div id="3">
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
@@ -187,7 +195,7 @@
             </div>
           </div>
         </div>
-
+      </div>
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
@@ -236,6 +244,7 @@
       </div>
       <h1>Hard drives and ssd</h1>
        <div class="main-content">
+        <div id="4">
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
@@ -250,7 +259,7 @@
           </div>
         </div>
       </div>
-
+    </div>
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
