--- a/HTML/CatalogPage.html
+++ b/HTML/CatalogPage.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>PC Hub-Catalog</title>
 	<link rel="icon" href="../Photo/icon.ico" sizes="96x96" type="image/icon type">
-
+	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<!--<link rel="stylesheet" href="../CSS/mainPage.css">-->
 	<link rel="stylesheet" href="../CSS/navbar.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
