--- a/HTML/parts.html
+++ b/HTML/parts.html
@@ -384,6 +384,13 @@
       },
     });
     swiperEl.initialize();
+    // Responsive navigation bar toggle
+    const toggleButton = document.querySelector('.toggle-button');
+        const navBar = document.querySelector('.navBar');
+
+        toggleButton.addEventListener('click', () => {
+            navBar.classList.toggle('active');
+        });
   </script>
 </body>
 
