--- a/HTML/parts.html
+++ b/HTML/parts.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../CSS/navbar.css">
   <link rel="stylesheet" href="../CSS/parts.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="stylesheet" href="../CSS/mainPageFooter.css">
+  <link rel="stylesheet" href="../CSS/fooooter.css">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
@@ -44,7 +44,7 @@
 
     <div>
       <h1>Motherboards</h1>
-      <div main-content style="display: flex; justify-content: space-between;">
+      <div class="main-content" >
         <div id="1">
           <div class="flip-card">
             <div class="flip-card-inner">
@@ -241,7 +241,7 @@
         </div>
 
       </div>
-      <h1>Hard drives and ssd</h1>
+      <h1 class="hdd">Hard drives and ssd</h1>
       <div class="main-content">
         <div id="4">
           <div class="flip-card">
