--- a/HTML/parts.html
+++ b/HTML/parts.html
@@ -42,14 +42,14 @@
       </ul>
     </div>
 
-    <div>
+    <div class="move">
       <h1>Motherboards</h1>
       <div class="main-content" >
         <div id="1">
           <div class="flip-card">
             <div class="flip-card-inner">
               <div class="flip-card-front">
-                <img src="../Photo/intelmb.png" alt="" style="width:250px;height:250px;">
+                <img src="../Photo/intelmb.png" alt="" >
               </div>
               <div class="flip-card-back">
                 <h2>Intel MSI MPG Z690 Carbon WiFi</h2>
@@ -65,7 +65,7 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="../Photo/aours.png" alt="" style="width:250px;height:250px;">
+              <img src="../Photo/aours.png" alt="" >
             </div>
             <div class="flip-card-back">
               <h2>Gigabyte Z690 Aorus Xtreme</h2>
@@ -81,7 +81,7 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="../Photo/asus.jpg" alt="" style="width:250px;height:250px;">
+              <img src="../Photo/asus.jpg" alt="" >
             </div>
             <div class="flip-card-back">
               <h2>Asus ROG X570 Crosshair Hero VIII</h2>
@@ -97,7 +97,7 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="../Photo/asrock.jpg " alt="" style="width:250px;height:250px;">
+              <img src="../Photo/asrock.jpg " alt="" >
             </div>
             <div class="flip-card-back">
               <h2>ASRock X570 PG Velocita</h2>
@@ -118,7 +118,7 @@
           <div class="flip-card">
             <div class="flip-card-inner">
               <div class="flip-card-front">
-                <img src="../Photo/amd.png" alt="" style="width:250px;height:250px;">
+                <img src="../Photo/amd.png" alt="" >
               </div>
               <div class="flip-card-back">
                 <h2>AMD Ryzen 7 7800X3D</h2>
@@ -133,7 +133,7 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="../Photo/i9.jpg" style="width:250px;height:250px;">
+              <img src="../Photo/i9.jpg" >
             </div>
             <div class="flip-card-back">
               <h2>Intel Core i9-12900K</h2>
@@ -148,7 +148,7 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="../Photo/ryzen9.png" style="width:250px;height:250px;">
+              <img src="../Photo/ryzen9.png" >
             </div>
             <div class="flip-card-back">
               <h2>AMD Ryzen 9 7950X3DK</h2>
@@ -163,7 +163,7 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="../Photo/i7.jpg" style="width:250px;height:250px;">
+              <img src="../Photo/i7.jpg" >
             </div>
             <div class="flip-card-back">
               <h2>Intel Core i7-12700K </h2>
@@ -183,7 +183,7 @@
           <div class="flip-card">
             <div class="flip-card-inner">
               <div class="flip-card-front">
-                <img src="../Photo/trident.jpg" alt="" style="width:250px;height:250px;">
+                <img src="../Photo/trident.jpg" alt="" >
               </div>
               <div class="flip-card-back">
                 <h2>G.Skill Trident Z5</h2>
@@ -198,7 +198,7 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="../Photo/viper.jpg" style="width:250px;height:250px;">
+              <img src="../Photo/viper.jpg" >
             </div>
             <div class="flip-card-back">
               <h2>Patriot Viper Steel</h2>
@@ -213,7 +213,7 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="../Photo/xtreem.jpg" style="width:250px;height:250px;">
+              <img src="../Photo/xtreem.jpg" >
             </div>
             <div class="flip-card-back">
               <h2>TeamGroup T-Force Xtreem</h2>
@@ -228,7 +228,7 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="../Photo/samsungram.jpg" style="width:250px;height:250px;">
+              <img src="../Photo/samsungram.jpg" >
             </div>
             <div class="flip-card-back">
               <h2>Samsung DDR5-4800 (2 x 16GB)</h2>
@@ -247,7 +247,7 @@
           <div class="flip-card">
             <div class="flip-card-inner">
               <div class="flip-card-front">
-                <img src="../Photo/barracudahd.png" style="width:250px;height:250px;">
+                <img src="../Photo/barracudahd.png" >
               </div>
               <div class="flip-card-back">
                 <h2>Seagate BarraCuda</h2>
@@ -262,7 +262,7 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="../Photo/toshibahd.png" style="width:250px;height:250px;">
+              <img src="../Photo/toshibahd.png" >
             </div>
             <div class="flip-card-back">
               <h2>Toshiba X300</h2>
@@ -277,7 +277,7 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="../Photo/firstssd.jpg" style="width:250px;height:250px;">
+              <img src="../Photo/firstssd.jpg" >
             </div>
             <div class="flip-card-back">
               <h2>Silicon Power SSD</h2>
@@ -292,7 +292,7 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="../Photo/secondssd.jpg" style="width:250px;height:250px;">
+              <img src="../Photo/secondssd.jpg" >
             </div>
             <div class="flip-card-back">
               <h2>Samsung SM883</h2>
@@ -312,7 +312,7 @@
           <div class="flip-card">
             <div class="flip-card-inner">
               <div class="flip-card-front">
-                <img src="../Photo/cmosbat.jpg" style="width:250px;height:250px;">
+                <img src="../Photo/cmosbat.jpg" >
               </div>
               <div class="flip-card-back">
                 <h2>Cmos battery</h2>
@@ -327,7 +327,7 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="../Photo/bios.jpg" style="width:250px;height:250px;">
+              <img src="../Photo/bios.jpg" >
             </div>
             <div class="flip-card-back">
               <h2>BIOS Chip for Pavilion G4</h2>
@@ -341,7 +341,7 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="../Photo/case.png" style="width:250px;height:250px;">
+              <img src="../Photo/case.png" >
             </div>
             <div class="flip-card-back">
               <h2>Litelong ATX PC Case</h2>
@@ -355,7 +355,7 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="../Photo/power2.0.png" style="width:250px;height:250px;">
+              <img src="../Photo/power2.0.png" >
             </div>
             <div class="flip-card-back">
               <h2>Power Supply Unit</h2>
